<resources>
    <string name="app_name">BildungMaidant</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Regresar">Regresar</string>
    <string name="Miembros">Miembros</string>
    <string name="Administrador">Administrador</string>
    <string name="Usuarios">Usuarios</string>
    <string name="Avisos">Avisos</string>
    <string name="Agregar_miembro">Agregar miembro</string>
    <string name="Aquí_hay_contenido_para_ti">Aquí hay contenido para ti...</string>
    <string name="Nombre_del_grupo">Nombre del grupo</string>
    <string name="Unirse_a_un_grupo_de_trabajo">Unirse a un grupo de trabajo</string>
    <string name="Ingrese_el_código_del_grupo">Ingrese el código del grupo</string>
    <string name="Código">Código</string>
    <string name="Unirse">Unirse</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Crear_un_grupo">Crear un grupo</string>
    <string name="Descripción_del_grupo">Descripción del grupo</string>
    <string name="Ingrese_Nombre">Ingrese Nombre</string>
    <string name="Ingrese_Descripción">Ingrese Descripción</string>
    <string name="Escuela_o_institución_a_la_que_pertenece_el_grupo">Escuela o institución a la que pertenece el grupo</string>
    <string name="Ingrese_institución">Ingrese Institución</string>
    <string name="Crear">Crear</string>
    <string name="Aviso1">Aviso1</string>
    <string name="Aviso2">Aviso2</string>
    <string name="Aviso3">Aviso3</string>
    <!--
    >>>>>>> 6b41061696c9698b94502de5b3fa014b7524981b-->
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="newUserString">¿Eres nuevo en Bildung Maidant?</string>
    <string name="CreateAccount">Crear una Cuenta</string>

    <string name="Notificaciones">Notificaciones</string>
    <string name="Recordatorio">Recordatorio</string>
    <string name="Chat_de_grupo">Chat de grupo</string>
    <string name="Mensaje_Privado">Mensaje Privado</string>
    <string name="Restablecer">Restablecer</string>
    <string name="Restablecer_configuración_de_notificaciones">Restablecer configuración de notificaciones</string>

    <!--
    >>>>>>> c0d8c64574204244b1518d846fd5c4b8a992b11c-->
    <string name="str_home">I N I C I O</string>
    <string name="frtTWCalendario">Recordatorios y tareas</string>
    <string name="frtSWBusqueda">Búsqueda</string>
    <string name="frtTWNuevoR">Nuevo recordatorio</string>
    <string name="fugTWEncabezado">Unirse a un grupo de trabajo</string>
    <string name="fugTWIndicacion01">Código del grupo</string>
    <string name="fugETIndicacion01h">Ingrese el código del grupo</string>
    <string name="fugBTNUnirse">Unirse</string>
    <string name="fugBTNCancelar">Cancelar</string>
    <string name="fcgTWEncabezado">Crear un grupo</string>
    <string name="fcgTWIndicacion01">Nombre del grupo</string>
    <string name="fcgETIndicacion01h">Ingrese el nombre del grupo</string>
    <string name="fcgTWIndicacion02">Descripción del grupo</string>
    <string name="fcgETIndicacion02h">Ingrese descripción del grupo</string>
    <string name="fcgTWIndicacion03">Escuela o institución a la que pertenece</string>
    <string name="fcgETIndicacion03h">Ingrese escuela o institución a la que pertenece</string>
    <string name="fcgBTNCrear">Crear</string>
    <string name="fcgBTNCancelar">Cancelar</string>
    <string name="ferTWEncabezado">Editar Recordatorio</string>
    <string name="ferTWIndicacion01">Nombre del recordatorio</string>
    <string name="ferETIndicacion01h">Editar nombre del recordatorio</string>
    <string name="ferTWIndicacion02">Descripción</string>
    <string name="ferETIndicacion02h">Editar descripción</string>
    <string name="ferTWIndicacion03">Añadir campo</string>
    <string name="ferTWIndicacion04">Fecha</string>
    <string name="ferETFechah" translatable="false">DD/MM/AAAA</string>
    <string name="ferTWIndicacion05">Seleccionar horario</string>
    <string name="ferETHorah" translatable="false">HH:MM</string>
    <string name="ferBTNCancelar">Cancelar</string>
    <string name="ferBTNActualizar">Actualizar</string>
    <string name="fnrTWEncabezado">Nuevo Recordatorio</string>
    <string name="fnrTWIndicacion01">Nombre del recordatorio</string>
    <string name="fnrETIndicacion01h">Agregar nombre del recordatorio</string>
    <string name="fnrTWIndicacion02">Fecha</string>
    <string name="fnrETFechah" translatable="false">DD/MM/AAAA</string>
    <string name="fnrTWIndicacion03">Horario</string>
    <string name="fnrETHorah" translatable="false">HH:MM</string>
    <string name="fnrTWIndicacion04">Descripción</string>
    <string name="fnrETIndicacion04h">Agregar descripción</string>
    <string name="fnrBTNCrear">Crear</string>
    <string name="fnrBTNCancelar">Cancelar</string>
    <string name="firTWEncabezado" translatable="false">NomRecordaSTRvar</string>
    <string name="firTWDescripcion">Descripción</string>
    <string name="firETDescripcionh" translatable="false">Esto es una descripción variable.</string>
    <string name="firTWFecha">Fecha</string>
    <string name="firETFechah" translatable="false">DD/MM/AAAA</string>
    <string name="firTWHora">Hora</string>
    <string name="firETHorah" translatable="false">HH:MM</string>
    <string name="firBTNEliminar">Eliminar</string>
    <string name="firBTNEditar">Editar</string>
    <string name="firBTNCompletar">Completar</string>
    <string name="fnmTWEncabezado">Nuevo Mensaje</string>
    <string name="fnmTWEnviarA">Enviar a:</string>
    <string name="fnmSWBusquedah">Buscar usuario</string>
    <string name="fnmTWNuevoMensaje">Mensaje nuevo</string>
    <string name="fnmETMensajeNuevoh">Escribir mensaje nuevo</string>
    <string name="fnmBTNEnviarMensaje">Enviar mensaje</string>
    <string name="tvRegresar">Regresar</string>

    <string name="fmmTVRegresar">Regresar</string>
    <string name="fmmTVNuevoMensaje">Nuevo Mensaje</string>
    <string name="fmmTVMensajes">Mensajes</string>

    <string name="faiTVRegresar">Regresar</string>
    <string name="faiTVActualizar">Actualizar información</string>
    <string name="faiTVNombres">Nombres</string>
    <string name="faiTVApellidos">Apellidos</string>
    <string name="faiTVCorreo">Correo</string>
    <string name="faiTVInstitucion">Escuela o Institución</string>
    <string name="faiTVFecha">Fecha de nacimiento</string>

    <string name="fciHMensaje">Escribir un mensaje</string>
    <string name="title_activity_menu">Menú</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>


    <string name="mngt_recordatorios_tareas">Recordatorios y tareas</string>
    <string name="mngt_recursos_didacticos">Recursos didácticos</string>
    <string name="mngt_mensajes">Mensajes</string>
    <string name="mngt_avisos">Avisos</string>
    <string name="mngt_miembros">Miembros</string>
    <string name="mngt_grupo_principal">Grupo</string>

    <string name="cvrtTVTitulo">Título del recordatorio</string>
    <string name="cvrtTVDescripcion">Aquí va la descripción del recordatorio o tarea.</string>
    <string name="cvrtTVFechah">DD/MM/AAAA</string>
    <string name="cvrtTVHorah">HH:MM</string>
    <string name="cgTVTitulo">Temas Selectos de Programación I</string>
    <string name="cgTVAdministrador">Ing. Faraday58</string>
    <string name="cgTVNombreProfesor">Profesor:</string>
    <string name="cvaTitulo">Titulo del aviso</string>
    <string name="cvaDescripcion">Descripcion del aviso</string>
    <string name="faTWNuevoAviso">Nuevo aviso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fnaTWEncabezado">Nuevo aviso</string>
    <string name="fnaTWIndicacion01">Nombre del aviso</string>
    <string name="fnaETIndicacion01h">Agregar el nombre del aviso</string>
    <string name="fnaTWIndicacion02">Descripción</string>
    <string name="fnaETIndicacion02h">Agregar una descripcion</string>
    <string name="fnaBTNCancelar">Cancelar</string>
    <string name="fnaBTNEnviar">ENVIAR</string>


</resources>

