<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/fcgRLBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/fcgTVFlecha"
                style="@style/TextView_little_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:text="&lt;"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/fcgTVRegresar"
                style="@style/TextView_little_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/fcgTVFlecha"
                android:padding="10dp"
                android:text="@string/faiTVRegresar"
                android:layout_toEndOf="@+id/fcgTVFlecha" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/fcgTWEncabezado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/fcgTWEncabezado"
        style="@style/TitleTextView"
        ></TextView>

    <TextView
        android:id="@+id/fcgTWIndicacion01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/fcgTWIndicacion01"
        style="@style/NormalTextView"
        ></TextView>

    <EditText
        android:id="@+id/fcgETNombreGrupo"
        style="@style/NormalTextView"
        android:layout_width="338dp"
        android:layout_height="37dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/primary_light"
        android:hint="@string/fcgETIndicacion01h"></EditText>

    <TextView
        android:id="@+id/fcgTWIndicacion02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/fcgTWIndicacion02"
        style="@style/NormalTextView"
        />

    <EditText
        android:id="@+id/fcgETDescripcionGrupo"
        style="@style/NormalTextView"
        android:layout_width="336dp"
        android:layout_height="170dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/primary_light"
        android:hint="@string/fcgETIndicacion02h"
        android:gravity="top"/>

    <TextView
        android:id="@+id/fcgTWIndicacion03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/fcgTWIndicacion03"
        style="@style/NormalTextView"
        />

    <EditText
        android:id="@+id/fcgETNEscuelaInstitucion"
        style="@style/NormalTextView"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/primary_light"
        android:hint="@string/fcgETIndicacion03h"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <Button
            android:id="@+id/fcgBTNCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/fugBTNCancelar"
            style="@style/NormalButton"
            />
        <Button
            android:id="@+id/fcgBTNCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/fcgBTNCrear"
            style="@style/NormalButton"
            />
    </LinearLayout>

</LinearLayout>