<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/cvrtCVGrupo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cgTVTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgTVTitulo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            ></TextView>

        <TextView
            android:id="@+id/cgTVNombreProfesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgTVNombreProfesor"
            android:textSize="20sp"
            ></TextView>

        <TextView
            android:layout_marginLeft="30dp"
            android:id="@+id/cgTVAdministrador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgTVAdministrador"
            android:textSize="20sp"
            android:textStyle="bold"
            ></TextView>

    </LinearLayout>

</androidx.cardview.widget.CardView>