<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="140dp">
        <TextView
            android:id="@+id/fugTWEncabezado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/fugTWEncabezado"
            android:textSize="28dp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            ></TextView>
        <ImageView
            android:id="@+id/fugIVEncabezado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_yellow_40dp"
            ></ImageView>
    </LinearLayout>
    <TextView
        android:id="@+id/fugTWIndicacion01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="70dp"
        android:text="@string/fugTWIndicacion01"
        android:textSize="20dp"
        android:textColor="@color/third_text"
        android:textStyle="bold"
        ></TextView>
    <EditText
        android:id="@+id/fugETCodigoNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="number"
        android:textSize="20dp"
        android:textColor="@color/primary_text"
        ></EditText>
    <Button
        android:id="@+id/fugBTNUnirse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="160dp"
        android:text="@string/fugBTNUnirse"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        android:background="@color/accent"
        ></Button>
    <Button
        android:id="@+id/fugBTNCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="155dp"
        android:text="@string/fugBTNCancelar"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        android:background="@color/accent"
        ></Button>
</LinearLayout>