<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/cvrgCVRecordatorioGeneral">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/crgTVTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cvrtTVTitulo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/primary"/>

        <TextView
            android:id="@+id/crgTVMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cvrtTVTitulo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/extra"/>

        <TextView
            android:id="@+id/crgTVDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cvrtTVDescripcion"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_today_black_40dp"
                android:layout_marginLeft="40dp"
                />

            <TextView
                android:id="@+id/crgTVFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/cvrtTVFechah"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time_black_24dp"
                android:layout_marginLeft="50dp"
                />

            <TextView
                android:id="@+id/crgTVHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:hint="@string/cvrtTVHorah"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>